fix: update dependencies and resolve security vulnerabilities (#10)
* fix: update dependencies and resolve 171 security vulnerabilities

- Bump Spring Boot 3.2.4 → 3.5.14 (fixes ~140 Trivy CVEs)
- Add flyway-database-postgresql for Flyway 11 compatibility
- Bump Flying Saucer 9.3.0 → 9.12.0, CommonMark 0.22.0 → 0.24.0
- Bump Apache POI 5.2.5 → 5.4.1, Stripe 25.3.0 → 29.2.0
- Bump AWS SDK 2.25.11 → 2.31.52, Resilience4j 2.2.0 → 2.3.0
- Bump logstash-logback-encoder 7.4 → 8.1
- Fix CodeQL: log injection in RequestLoggingFilter and RateLimitFilter
- Fix CodeQL: add CSRF disabled justification in SecurityConfig
- Fix CodeQL: replace deprecated Locale constructor with Locale.of()
- Fix CodeQL: add @ToString to Document and Signature entities
- Fix security.yml infinite loop on branch update
- Update CLAUDE.md with documentation rules and version bump

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: correct dependency versions that don't exist on Maven Central

- Flying Saucer 9.12.0 → 9.4.0 (9.12.0 doesn't exist)
- Stripe 29.2.0 → 29.1.0 (29.2.0 doesn't exist)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: sanitize all log parameters in RateLimitFilter to resolve CodeQL alert

Sanitize userId and tier in addition to path to prevent any
log injection vectors from JWT subject claims.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Signed-off-by: Victor_assagra <62857068+JokerFoxyy@users.noreply.github.com>
Co-authored-by: Victor <victorassagra@hotmail.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>
Co-authored-by: Victor_assagra <62857068+JokerFoxyy@users.noreply.github.com>